# AI-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  codebase_context.md  docker-compose.yml  frontend_architecture_alignment.md  make.ps1  pandera-validator-implementation-summary.md  pyproject.toml  run_pipeline_demo.py
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  registry.py  roles.py
app/agents/deduplication/: __init__.py  agent.py
app/agents/input_validator/: __init__.py  agent.py  prompts.py
app/agents/planner/: __init__.py  agent.py  prompts.py
app/agents/reporter/: __init__.py  agent.py  prompts.py
app/agents/result_validator/: __init__.py  agent.py  prompts.py
app/agents/semantic_analyzer/: profiler_agent.py
app/agents/supervisor/: __init__.py  agent.py  prompts.py
app/api/: __init__.py  dependencies.py  middleware.py
app/api/v1/: deduplication.py  health.py  pipeline.py  router.py
app/config/: __init__.py  config.py
app/core/: __init__.py  database.py  llm_factory.py  redis_client.py
app/exceptions/: ingestion_exceptions.py
app/graphs/: __init__.py  checkpointer.py  edges.py  graph.py  nodes.py
app/graphs/states/: global_state.py
app/ingestion/: __init__.py  normalizer.py
app/ingestion/parsers/: __init__.py  (+4 more)
app/models/: lineage.py
app/services/: __init__.py  ingestion.py  lineage_service.py  lineage_utils.py  pipeline.py
app/tools/: tool_registration.py
app/validators/: __init__.py  models.py  runner.py  schema_builder.py
architecture/: 28-05-Architecture.md  deduplication-implementation.md  implementation_step.md  walkthrough.md
docs/: dedup_agent_current_state_report.md  postgres_lineage_architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/docs/: 001-instructions.md
frontend/src/: App.tsx  index.css
tests/: TEST_REPORT_TEMPLATE.md  generate_test_datasets.py  hospital-1-new.csv  run_test_flow.py
tests/dirty_datasets/: DS01_full_row_duplicate.csv  DS02_pk_duplicate.csv  DS03_high_null.csv  DS04_null_and_dmv.csv  DS05_type_mismatch.csv  DS06_mixed_type.csv  DS07_pk_dup_and_null.csv  DS08_null_and_typecast.csv  DS09_all_issues.csv  DS10_edge_cases.csv  MANIFEST.md
(+47 files in other folders)
