[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "agentic-data-engineering"
version = "0.1.0"
description = "Multi-Agent ETL System for Structured Data Cleaning using LangGraph"
requires-python = ">=3.13"
dependencies = [
    # NumPy 2 stack — ép numexpr/bottleneck bản build cho NumPy 2 (tránh lỗi conda/pip lẫn 1.x)
    "numpy>=2.0.0,<3",
    "numexpr>=2.10.2",
    "bottleneck>=1.4.0",
    # LangGraph / LangChain (bản hiện hành trên PyPI, 2026)
    "langgraph>=1.1.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.0",
    # Vector store
    "chromadb>=1.5.9",
    "langchain-chroma>=0.2.0",
    # Data processing
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=18.0.0",
    "openpyxl>=3.1.0",
    "chardet>=5.2.0",
    "duckdb>=1.1.0",
    "psycopg[binary]>=3.3.0",
    # API & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-multipart>=0.0.9",
    # State / Cache
    "redis>=5.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    # Validation & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Observability
    "langsmith>=0.7.0",
    "structlog>=25.0.0",
    # Utils
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "locust>=2.28.0",
    "faker>=25.0.0",
]

[project.scripts]
ade = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
